@@ -1,0 +1,22 @@
+*.fits
+*.db
+*.log
+ice/lib/camera.cpp
+ice/lib/device.cpp
+ice/lib/exceptions.cpp
+ice/lib/focusing.cpp
+ice/lib/guider.cpp
+ice/lib/image.cpp
+ice/lib/instruments.cpp
+ice/include/camera.h
+ice/include/device.h
+ice/include/exceptions.h
+ice/include/focusing.h
+ice/include/guider.h
+ice/include/image.h
+ice/include/instruments.h
+ice/include/repository.h
+ice/include/tasks.h
+ice/include/types.h
+
+
